--- a/css/glanz_style.css
+++ b/css/glanz_style.css
@@ -2498,7 +2498,7 @@ ul.mega-menu {
 
 		
 		.gla_slide_subtitle {
-			font:400 20px Dosis, Arial;
+			font:400 20px MuseoSansCyrl;
 			text-transform: none;
 			line-height: 1.125;
 			margin-bottom: 20px;
